# yast-geo-cluster

./: .gitignore  .travis.yml  MAINTAINER  README.md  RPMNAME
.github/workflows/: ci.yml
agents/: Makefile.am
doc/: Makefile.am
doc/autodocs/: Makefile.am
package/: yast2-geo-cluster.changes  yast2-geo-cluster.spec
src/: Makefile.am
src/autoyast-rnc/: geo-cluster.rnc
src/clients/: geo-cluster.rb  geo-cluster_auto.rb  geo-cluster_proposal.rb
src/desktop/: geo-cluster.desktop  org.opensuse.yast.GeoCluster.desktop
src/include/geo-cluster/: complex.rb  dialogs.rb  helps.rb  wizards.rb
src/modules/: GeoCluster.rb  GeoCluster2.pm  GeoCluster3.py
src/scrconf/: booth.scr
src/servers_non_y2/: ag_booth
testsuite/tests/: GeoCluster.out  GeoCluster.rb
